clean debops.ferm rules for wildcard address
Signed-off-by: Sеrgiо Nеmirоwski <sergio@nspcc.io>

--- a/roles/ir/defaults/main.yml
+++ b/roles/ir/defaults/main.yml
@@ -214,7 +214,7 @@ neofs_ir__ferm__dependent_rules:
   - type: 'accept'
     name: 'neofs-ir{{ neofs_ir__instance }}_prometheus'
     dport: [ '{{ neofs_ir__prometheus_port }}' ]
-    daddr: [ "{{ ( neofs_ir__prometheus_address in ['0.0.0.0', '::0', '::'] )| ternary( '0/0', neofs_ir__prometheus_address ) }}" ]
+    daddr: "{{ ( neofs_ir__prometheus_address in ['0.0.0.0', '::0', '::'] )| ternary( [], [neofs_ir__prometheus_address] ) }}"
     saddr: '{{ neofs_ir__prometheus_allow + neofs_ir__prometheus_group_allow + neofs_ir__prometheus_host_allow }}'
     protocol: 'tcp'
     rule_state: "{{ 'present' if neofs_ir__prometheus_enabled and not ( neofs_ir__prometheus_address == 'localhost' or '127.0.0.0/8'|ansible.utils.network_in_usable( neofs_ir__prometheus_address ) or '::1/128'|ansible.utils.network_in_usable( neofs_ir__prometheus_address ) ) else 'absent' }}"
@@ -222,7 +222,7 @@ neofs_ir__ferm__dependent_rules:
   - type: 'accept'
     name: 'neofs-ir{{ neofs_ir__instance }}_pprof'
     dport: [ '{{ neofs_ir__pprof_port }}' ]
-    daddr: [ "{{ ( neofs_ir__pprof_address in ['0.0.0.0', '::0', '::'] )| ternary( '0/0', neofs_ir__pprof_address ) }}" ]
+    daddr: "{{ ( neofs_ir__pprof_address in ['0.0.0.0', '::0', '::'] )| ternary( [], [neofs_ir__pprof_address] ) }}"
     saddr: '{{ neofs_ir__pprof_allow + neofs_ir__pprof_group_allow + neofs_ir__pprof_host_allow }}'
     protocol: 'tcp'
     rule_state: "{{ 'present' if neofs_ir__pprof_enabled and not ( neofs_ir__pprof_address == 'localhost' or '127.0.0.0/8'|ansible.utils.network_in_usable( neofs_ir__pprof_address ) or '::1/128'|ansible.utils.network_in_usable( neofs_ir__pprof_address ) ) else 'absent' }}"
@@ -230,7 +230,7 @@ neofs_ir__ferm__dependent_rules:
   - type: 'accept'
     name: 'neofs-ir{{ neofs_ir__instance }}_control'
     dport: [ '{{ neofs_ir__control_port }}' ]
-    daddr: [ "{{ ( neofs_ir__control_address in ['0.0.0.0', '::0', '::'] )| ternary( '0/0', neofs_ir__control_address ) }}" ]
+    daddr: "{{ ( neofs_ir__control_address in ['0.0.0.0', '::0', '::'] )| ternary( [], [neofs_ir__control_address] ) }}"
     saddr: '{{ neofs_ir__control_allow + neofs_ir__control_group_allow + neofs_ir__control_host_allow }}'
     protocol: 'tcp'
     rule_state: "{{ 'present' if neofs_ir__control_enabled and not ( neofs_ir__control_address == 'localhost' or '127.0.0.0/8'|ansible.utils.network_in_usable( neofs_ir__control_address ) or '::1/128'|ansible.utils.network_in_usable( neofs_ir__control_address ) ) else 'absent' }}"
@@ -238,7 +238,7 @@ neofs_ir__ferm__dependent_rules:
   - type: 'accept'
     name: 'neofs-ir{{ neofs_ir__instance }}_blockchain_rpc'
     dport: [ '{{ neofs_ir__blockchain_rpc_port }}' ]
-    daddr: [ "{{ ( neofs_ir__blockchain_rpc_address in ['0.0.0.0', '::0', '::'] )| ternary( '0/0', neofs_ir__blockchain_rpc_address ) }}" ]
+    daddr: "{{ ( neofs_ir__blockchain_rpc_address in ['0.0.0.0', '::0', '::'] )| ternary( [], [neofs_ir__blockchain_rpc_address] ) }}"
     saddr: '{{ neofs_ir__blockchain_rpc_allow + neofs_ir__blockchain_rpc_group_allow + neofs_ir__blockchain_rpc_host_allow }}'
     protocol: 'tcp'
     rule_state: "{{ 'present' if not neofs_ir__external_sidechain and not ( neofs_ir__blockchain_rpc_address == 'localhost' or '127.0.0.0/8'|ansible.utils.network_in_usable( neofs_ir__blockchain_rpc_address ) or '::1/128'|ansible.utils.network_in_usable( neofs_ir__blockchain_rpc_address ) ) else 'absent' }}"
@@ -246,7 +246,7 @@ neofs_ir__ferm__dependent_rules:
   - type: 'accept'
     name: 'neofs-ir{{ neofs_ir__instance }}_blockchain_tls_rpc'
     dport: [ '{{ neofs_ir__blockchain_tls_rpc_port }}' ]
-    daddr: [ "{{ ( neofs_ir__blockchain_tls_rpc_address in ['0.0.0.0', '::0', '::'] )| ternary( '0/0', neofs_ir__blockchain_tls_rpc_address ) }}" ]
+    daddr: "{{ ( neofs_ir__blockchain_tls_rpc_address in ['0.0.0.0', '::0', '::'] )| ternary( [], [neofs_ir__blockchain_tls_rpc_address] ) }}"
     saddr: '{{ neofs_ir__blockchain_tls_rpc_allow + neofs_ir__blockchain_tls_rpc_group_allow + neofs_ir__blockchain_tls_rpc_host_allow }}'
     protocol: 'tcp'
     rule_state: "{{ 'present' if neofs_ir__blockchain_tls_rpc_enabled and not ( neofs_ir__blockchain_tls_rpc_address == 'localhost' or '127.0.0.0/8'|ansible.utils.network_in_usable( neofs_ir__blockchain_tls_rpc_address ) or '::1/128'|ansible.utils.network_in_usable( neofs_ir__blockchain_tls_rpc_address ) ) else 'absent' }}"
@@ -254,7 +254,7 @@ neofs_ir__ferm__dependent_rules:
   - type: 'accept'
     name: 'neofs-ir{{ neofs_ir__instance }}_blockchain_p2p'
     dport: [ '{{ neofs_ir__blockchain_p2p_port }}' ]
-    daddr: [ "{{ ( neofs_ir__blockchain_p2p_address in ['0.0.0.0', '::0', '::'] )| ternary( '0/0', neofs_ir__blockchain_p2p_address ) }}" ]
+    daddr: "{{ ( neofs_ir__blockchain_p2p_address in ['0.0.0.0', '::0', '::'] )| ternary( [], [neofs_ir__blockchain_p2p_address] ) }}"
     saddr: '{{ neofs_ir__blockchain_p2p_allow + neofs_ir__blockchain_p2p_group_allow + neofs_ir__blockchain_p2p_host_allow }}'
     protocol: 'tcp'
     rule_state: "{{ 'present' if not neofs_ir__external_sidechain and not ( neofs_ir__blockchain_p2p_address == 'localhost' or '127.0.0.0/8'|ansible.utils.network_in_usable( neofs_ir__blockchain_p2p_address ) or '::1/128'|ansible.utils.network_in_usable( neofs_ir__blockchain_p2p_address ) ) else 'absent' }}"
