rest_gw: define undefined variable
Signed-off-by: Sеrgiо Nеmirоwski <sergio@nspcc.io>

--- a/roles/rest_gw/defaults/main.yml
+++ b/roles/rest_gw/defaults/main.yml
@@ -9,6 +9,8 @@ neofs_rest__github_asset_name: 'neofs-rest-gw-linux-amd64'
 # Flag to skip binaries download
 neofs_rest__binaries_download: True
 
+neofs_rest__instance: ''
+
 neofs_rest__user: 'neofs-rest'
 neofs_rest__group: 'neofs-rest'
 
