--- a/roles/s3_gw/defaults/main.yml
+++ b/roles/s3_gw/defaults/main.yml
@@ -38,6 +38,7 @@ neofs_s3__pprof_port: 9932
 
 neofs_s3__pool_error_threshold: 100
 
+neofs_s3__fschain_endpoints: [ 'http://localhost:10001' ]
 
 neofs_s3__raw_config:
   logger:
@@ -48,12 +49,12 @@ neofs_s3__raw_config:
     passphrase: '{{ neofs_s3__wallet_password }}'
   server:
     - address: '{{ neofs_s3__s3_address | ansible.utils.ipwrap }}:{{ neofs_s3__s3_port }}'
-  rpc_endpoint: 'http://localhost:40332'
   pool_error_threshold: '{{ neofs_s3__pool_error_threshold }}'
   resolve_order: [ nns ]
   tree:
     service: 'localhost:8080'
-  rpc_endpoint: "http://{{ hostvars[ groups['neofs_ir'][0] ].ansible_host }}:10001"
+  fschain:
+    endpoints:
   peers: >-
     {
     {% for host in groups['neofs_storage'] %}
