--- a/roles/storage/defaults/main.yml
+++ b/roles/storage/defaults/main.yml
@@ -103,8 +103,7 @@ neofs_storage__grpc_endpoints:
 neofs_storage__grpc: |
   {% for endpoint in neofs_storage__grpc_endpoints %}
   {% if 'enabled' not in endpoint or endpoint.enabled %}
-  {{ loop.index0 }}:
-    endpoint: '{{ endpoint.address | ansible.utils.ipwrap }}:{{ endpoint.port }}'
+  - endpoint: '{{ endpoint.address | ansible.utils.ipwrap }}:{{ endpoint.port }}'
   {% if 'tls' in endpoint and endpoint.tls %}
     tls:
       enabled: True
