rename systemd -> systemd_service
rename ansible.builtin.systemd to ansible.builtin.systemd_service
https://docs.ansible.com/ansible/latest/collections/ansible/builtin/systemd_service_module.html#ansible-collections-ansible-builtin-systemd-service-module

Signed-off-by: Sеrgiо Nеmirоwski <sergio@nspcc.io>

--- a/roles/rest_gw/handlers/main.yml
+++ b/roles/rest_gw/handlers/main.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Restart NeoFS REST service
-  ansible.builtin.systemd:
+  ansible.builtin.systemd_service:
     name: 'neofs-rest.service'
     state: 'restarted'
     enabled: yes
