--- a/roles/ir/handlers/restart.yml
+++ b/roles/ir/handlers/restart.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Restart NeoFS IR service
-  ansible.builtin.systemd:
+  ansible.builtin.systemd_service:
     name: 'neofs-ir{{ neofs_ir__instance }}.service'
     state: 'restarted'
     enabled: yes
