--- a/roles/storage/handlers/restart.yml
+++ b/roles/storage/handlers/restart.yml
@@ -1,7 +1,7 @@
 ---
 
 - name: Restart NeoFS Storage service
-  ansible.builtin.systemd:
+  ansible.builtin.systemd_service:
     name: 'neofs-storage{{ neofs_storage__instance }}.service'
     state: 'restarted'
     enabled: yes
