storage: update to 0.46 version
Signed-off-by: Sеrgiо Nеmirоwski <sergio@nspcc.io>

--- a/roles/storage/defaults/main.yml
+++ b/roles/storage/defaults/main.yml
@@ -47,8 +47,6 @@ neofs_storage__wallet_path: '{{ neofs_storage__conf_dir }}/wallet.json'
 neofs_storage__wallet_address: ''
 neofs_storage__wallet_password: ''
 
-neofs_storage__tree_service: False
-
 neofs_storage__fschain_endpoints: []
 neofs_storage__announce_addresses: [ '{{ neofs_storage__grpc_address | ansible.utils.ipwrap }}:{{ neofs_storage__grpc_port }}' ]
 
@@ -85,6 +83,10 @@ neofs_storage__pprof_port: 9912
 neofs_storage__pprof_allow: []
 neofs_storage__pprof_group_allow: []
 neofs_storage__pprof_host_allow: []
+
+neofs_storage__attributes: []
+neofs_storage__group_attributes: []
+neofs_storage__host_attributes: []
 
 neofs_storage__grpc_endpoints:
   - address: '{{ neofs_storage__grpc_address }}'
@@ -168,32 +170,24 @@ neofs_storage__metas: '{{ neofs_storage__metas_raw | from_yaml }}'
 
 neofs_storage__shards: |
   {% for data in neofs_storage__datas %}
-  {{ loop.index0 }}:
-    metabase:
+  - metabase:
       path: '{{ neofs_storage__metas[ loop.index0 // (neofs_storage__datas|length // neofs_storage__metas|length) ] }}/metabase{{ loop.index0 if not neofs_storage__datas|length == neofs_storage__metas|length }}.db'
     writecache:
       path: '{{ neofs_storage__metas[ loop.index0 // (neofs_storage__datas|length // neofs_storage__metas|length) ] }}/writecache{{ loop.index0 if not neofs_storage__datas|length == neofs_storage__metas|length }}'
     blobstor:
-      - type: fstree
+        type: fstree
         path: '{{ data }}/tree'
-  {% if neofs_storage__tree_service %}
-    pilorama:
-        path: '{{ data }}/pilorama.db'
-        max_batch_delay: 10ms
-        max_batch_size: 200
-  {% endif %}
   {% endfor %}
 
 
 neofs_storage__default_config:
   - options:
       storage:
-        shard: '{{ neofs_storage__shards | from_yaml }}'
+        shards: '{{ neofs_storage__shards | from_yaml }}'
 
   - options:
       node:
-        attribute_0: 'UN-LOCODE:FI HEL'
-        attribute_1: 'Price:1'
+        attributes: '{{ neofs_storage__attributes + neofs_storage__group_attributes + neofs_storage__host_attributes }}'
 
   - enabled: '{{ neofs_storage__prometheus_enabled }}'
     options:
@@ -206,16 +200,6 @@ neofs_storage__default_config:
       pprof:
         enabled: True
         address: '{{ neofs_storage__pprof_address | ansible.utils.ipwrap }}:{{ neofs_storage__pprof_port }}'
-
-  - enabled: '{{ neofs_storage__tree_service }}'
-    options:
-      tree:
-        enabled: true
-        cache_size: 15
-        replication_worker_count: 16
-        replication_channel_capacity: 16
-        replication_timeout: 5s
-        sync_interval: 1h
 
 neofs_storage__config: []
 neofs_storage__group_config: []
